[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "yamle"
authors = [{name = "Martin Ferianc", email = "ferianc.martin@gmail.com"}]
description = "YAMLE: Yet Another Machine Learning Environment"
version = "0.0.1"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
]
license = {file = "LICENSE"}
requires-python = ">=3.9"
dynamic = ["readme", "dependencies"]

[tool.setuptools.packages.find]
where = ["yamle"]

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 100
target-version = ["py39", "py310"]
include = '\.pyi?$'